--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-	"name": "@5htp/core",
+	"name": "5htp",
 	"description": "5-HTP, scientifically called 5-Hydroxytryptophan, is the precursor of happiness neurotransmitter.",
 	"version": "0.0.2",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
-	"repository": "git://github.com/gaetanlegac/5-htp.git",
+	"repository": "git://github.com/gaetanlegac/5htp-cli.git",
 	"license": "MIT",
 	"bin": {
 		"5htp": "cli/index.ts"
@@ -16,68 +16,6 @@
 		"framework"
 	],
 	"dependencies": {
-		"@sendgrid/mail": "^7.4.6",
-		"accepts": "^1.3.7",
-		"activity-detector": "^3.0.0",
-		"ansi-to-html": "^0.7.1",
-		"array-move": "^3.0.1",
-		"bowser": "^2.11.0",
-		"chart.js": "^3.6.2",
-		"cli-highlight": "^2.1.11",
-		"compression": "^1.7.4",
-		"connect-redis": "^6.0.0",
-		"cookie-parser": "^1.4.5",
-		"core-js": "^3.18.1",
-		"cors": "^2.8.5",
-		"cron-parser": "^4.0.0",
-		"dayjs": "^1.11.5",
-		"deep-extend": "^0.6.0",
-		"dottie": "^2.0.2",
-		"express": "^4.17.1",
-		"express-csp-header": "^5.0.0",
-		"express-fileupload": "^1.2.1",
-		"express-static-gzip": "^2.1.1",
-		"fast-safe-stringify": "^2.1.1",
-		"fs-extra": "^10.1.0",
-		"google-auth-library": "^7.11.0",
-		"handlebars": "^4.7.7",
-		"helmet": "^4.6.0",
-		"history": "^5.0.1",
-		"hpp": "^0.2.3",
-		"human-interval": "^2.0.1",
-		"intl": "^1.2.5",
-		"iso-639-1": "^2.1.9",
-		"javascript-time-ago": "^2.3.9",
-		"js-cookie": "^3.0.1",
-		"jsonwebtoken": "^8.5.1",
-		"load-script": "^2.0.0",
-		"locale": "^0.1.0",
-		"markdown-it": "^13.0.1",
-		"md5": "^2.3.0",
-		"module-alias": "^2.2.2",
-		"morgan": "^1.10.0",
-		"mysql2": "^2.3.0",
-		"nodemailer": "^6.6.3",
-		"path-to-regexp": "^6.2.0",
-		"picomatch": "^2.3.1",
-		"preact-render-to-string": "^5.1.19",
-		"react-scrollbars-custom": "^4.0.27",
-		"react-slider": "^2.0.1",
-		"react-textarea-autosize": "^8.3.3",
-		"redis": "^3.1.2",
-		"regenerator-runtime": "^0.13.9",
-		"request": "^2.88.2",
-		"sharp": "^0.29.1",
-		"sql-formatter": "^4.0.2",
-		"ts-alias": "^0.0.3-1",
-		"tslog": "^3.2.2",
-		"uuid": "^8.3.2",
-		"uuid-by-string": "^3.0.4",
-		"validator": "^13.7.0",
-		"ws": "^8.2.2",
-		"yaml": "^1.10.2"
-	},
-	"devDependencies": {
 		"@babel/cli": "^7.15.4",
 		"@babel/plugin-proposal-class-properties": "^7.14.5",
 		"@babel/plugin-proposal-decorators": "^7.15.4",
@@ -104,6 +42,7 @@
 		"@types/universal-analytics": "^0.4.5",
 		"@types/webpack-env": "^1.16.2",
 		"@types/ws": "^7.4.7",
+		"5htp-core": "^0.0.2",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -113,6 +52,7 @@
 		"console-table-printer": "^2.10.0",
 		"css-loader": "^6.2.0",
 		"css-minimizer-webpack-plugin": "^4.1.0",
+		"dayjs": "^1.11.5",
 		"favicons": "^6.2.2",
 		"filesize": "^8.0.3",
 		"image-minimizer-webpack-plugin": "^2.2.0",
@@ -124,13 +64,16 @@
 		"less-vars-to-js": "^1.3.0",
 		"mini-css-extract-plugin": "^2.2.2",
 		"minimatch": "^3.0.4",
+		"module-alias": "^2.2.2",
 		"node-notifier": "^10.0.0",
 		"null-loader": "^4.0.1",
 		"prompts": "^2.4.2",
 		"react-dev-utils": "^11.0.4",
 		"speed-measure-webpack-plugin": "^1.5.0",
 		"terser-webpack-plugin": "^5.2.4",
+		"ts-alias": "^0.0.3-1",
 		"ts-node": "^10.9.1",
+		"tslog": "^3.3.4",
 		"webfont": "^11.2.26",
 		"webpack": "^5.56.0",
 		"webpack-assets-manifest": "^5.0.6",
@@ -139,5 +82,13 @@
 		"webpack-hot-middleware": "^2.25.0",
 		"webpack-node-externals": "^3.0.0",
 		"webpack-virtual-modules": "^0.4.3"
+	},
+	"devDependencies": {
+		"@types/favicons": "^6.2.2",
+		"@types/fs-extra": "^9.0.12",
+		"@types/node": "^16.9.1",
+		"@types/nodemailer": "^6.4.4",
+		"@types/prompts": "^2.0.14",
+		"@types/webpack-env": "^1.16.2"
 	}
 }
