--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
 
         "paths": {
             "@cli/*": [ "./*" ],
-            "@cli": [ "./" ],
-            "@server_old/*": [ "../src/server/*" ]
+            "@cli": [ "./" ]
         },
     },
 
