Added init command

--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
 		"mini-css-extract-plugin": "^2.2.2",
 		"minimatch": "^3.0.4",
 		"module-alias": "^2.2.2",
+		"node-cmd": "^5.0.0",
 		"node-notifier": "^10.0.0",
 		"null-loader": "^4.0.1",
 		"prompts": "^2.4.2",
 		"react-dev-utils": "^11.0.4",
+		"replace-once": "^1.0.0",
 		"speed-measure-webpack-plugin": "^1.5.0",
 		"terser-webpack-plugin": "^5.2.4",
 		"ts-alias": "^0.0.4",
