--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "5-HTP, scientifically called 5-Hydroxytryptophan, is the precursor of happiness neurotransmitter.",
-	"version": "0.0.9-2",
+	"version": "0.2.0",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp-cli.git",
 	"license": "MIT",
@@ -23,7 +23,6 @@
 		"@babel/plugin-proposal-private-property-in-object": "^7.15.4",
 		"@babel/plugin-transform-react-constant-elements": "^7.14.5",
 		"@babel/plugin-transform-react-jsx-self": "^7.14.9",
-		"@babel/plugin-transform-react-jsx-source": "^7.14.5",
 		"@babel/preset-env": "^7.15.6",
 		"@babel/preset-react": "^7.14.5",
 		"@babel/preset-typescript": "^7.15.0",
@@ -72,7 +71,7 @@
 		"replace-once": "^1.0.0",
 		"speed-measure-webpack-plugin": "^1.5.0",
 		"terser-webpack-plugin": "^5.2.4",
-		"ts-alias": "^0.0.5-1",
+		"ts-alias": "^0.0.6",
 		"ts-node": "^10.9.1",
 		"tslog": "^3.3.4",
 		"webfont": "^11.2.26",
@@ -85,11 +84,13 @@
 		"webpack-virtual-modules": "^0.4.3"
 	},
 	"devDependencies": {
+		"@babel/plugin-transform-react-jsx-source": "^7.19.6",
 		"@types/favicons": "^6.2.2",
 		"@types/fs-extra": "^9.0.12",
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2"
+		"@types/webpack-env": "^1.16.2",
+		"babel-plugin-glob-import": "^0.0.1"
 	}
 }
