--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"name": "5htp",
-	"description": "5-HTP, scientifically called 5-Hydroxytryptophan, is the precursor of happiness neurotransmitter.",
+	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
 	"version": "0.2.0",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
-	"repository": "git://github.com/gaetanlegac/5htp-cli.git",
+	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
 	"bin": {
 		"5htp": "src/index.ts"
