Update babel glob import to 0.0.6-2

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@types/webpack-env": "^1.16.2",
 		"@types/ws": "^7.4.7",
 		"babel-loader": "^8.2.2",
+		"babel-plugin-glob-import": "^0.0.6-2",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
 		"brotli-webpack-plugin": "^1.1.0",
@@ -90,7 +91,6 @@
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2",
-		"babel-plugin-glob-import": "^0.0.1"
+		"@types/webpack-env": "^1.16.2"
 	}
 }
