--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.2.3-1",
+	"version": "0.3.0",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -41,7 +41,6 @@
 		"@types/webpack-env": "^1.16.2",
 		"@types/ws": "^7.4.7",
 		"babel-loader": "^8.2.2",
-		"babel-plugin-glob-import": "^0.0.6-3",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
 		"brotli-webpack-plugin": "^1.1.0",
@@ -73,7 +72,6 @@
 		"terser-webpack-plugin": "^5.2.4",
 		"ts-alias": "^0.0.7",
 		"ts-node": "^10.9.1",
-		"tslog": "^3.3.4",
 		"webfont": "^11.2.26",
 		"webpack": "^5.56.0",
 		"webpack-assets-manifest": "^5.0.6",
@@ -89,6 +87,7 @@
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2"
+		"@types/webpack-env": "^1.16.2",
+		"babel-plugin-glob-import": "^0.0.7"
 	}
 }
