--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.3.1-1",
+	"version": "0.3.2",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -18,7 +18,6 @@
 	"dependencies": {
 		"@babel/cli": "^7.15.4",
 		"@babel/plugin-proposal-class-properties": "^7.14.5",
-		"@babel/plugin-proposal-decorators": "^7.15.4",
 		"@babel/plugin-proposal-private-methods": "^7.14.5",
 		"@babel/plugin-proposal-private-property-in-object": "^7.15.4",
 		"@babel/plugin-transform-react-constant-elements": "^7.14.5",
