--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.3.5",
+	"version": "0.3.6",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -73,7 +73,6 @@
 		"ts-alias": "^0.0.7",
 		"ts-node": "^10.9.1",
 		"webfont": "^11.2.26",
-		"webpack": "^5.56.0",
 		"webpack-assets-manifest": "^5.0.6",
 		"webpack-bundle-analyzer": "^4.4.2",
 		"webpack-dev-middleware": "^5.1.0",
@@ -82,11 +81,13 @@
 		"webpack-virtual-modules": "^0.4.3"
 	},
 	"devDependencies": {
+		"@types/babel__preset-env": "^7.9.6",
 		"@types/favicons": "^6.2.2",
 		"@types/fs-extra": "^9.0.12",
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2"
+		"@types/webpack-env": "^1.16.2",
+		"webpack": "^5.89.0"
 	}
 }
