--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.4.2",
+	"version": "0.4.3",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -88,6 +88,7 @@
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
 		"@types/webpack-env": "^1.16.2",
+		"babel-plugin-transform-remove-console": "^6.9.4",
 		"webpack": "^5.89.0"
 	}
 }
