--- a/package.json
+++ b/package.json
@@ -78,7 +78,9 @@
 		"webpack-dev-middleware": "^5.1.0",
 		"webpack-hot-middleware": "^2.25.0",
 		"webpack-node-externals": "^3.0.0",
-		"webpack-virtual-modules": "^0.4.3"
+		"webpack-virtual-modules": "^0.4.3",
+		"babel-plugin-transform-remove-console": "^6.9.4",
+		"webpack": "^5.89.0"
 	},
 	"devDependencies": {
 		"@types/babel__preset-env": "^7.9.6",
@@ -87,8 +89,6 @@
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2",
-		"babel-plugin-transform-remove-console": "^6.9.4",
-		"webpack": "^5.89.0"
+		"@types/webpack-env": "^1.16.2"
 	}
 }
