--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.4.3-2",
+	"version": "0.4.3-3",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -40,9 +40,10 @@
 		"@types/webpack-env": "^1.16.2",
 		"@types/ws": "^7.4.7",
 		"babel-loader": "^8.2.2",
-		"babel-plugin-glob-import": "^0.0.8-1",
+		"babel-plugin-glob-import": "^0.0.9",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+		"babel-plugin-transform-remove-console": "^6.9.4",
 		"brotli-webpack-plugin": "^1.1.0",
 		"browser-sync": "^2.27.5",
 		"compression-webpack-plugin": "^8.0.1",
@@ -73,14 +74,13 @@
 		"ts-alias": "^0.0.7",
 		"ts-node": "^10.9.1",
 		"webfont": "^11.2.26",
+		"webpack": "^5.89.0",
 		"webpack-assets-manifest": "^5.0.6",
 		"webpack-bundle-analyzer": "^4.4.2",
 		"webpack-dev-middleware": "^5.1.0",
 		"webpack-hot-middleware": "^2.25.0",
 		"webpack-node-externals": "^3.0.0",
-		"webpack-virtual-modules": "^0.4.3",
-		"babel-plugin-transform-remove-console": "^6.9.4",
-		"webpack": "^5.89.0"
+		"webpack-virtual-modules": "^0.4.3"
 	},
 	"devDependencies": {
 		"@types/babel__preset-env": "^7.9.6",
