--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.4.3-3",
+	"version": "0.4.3-4",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -43,7 +43,6 @@
 		"babel-plugin-glob-import": "^0.0.9-1",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-		"babel-plugin-transform-remove-console": "^6.9.4",
 		"brotli-webpack-plugin": "^1.1.0",
 		"browser-sync": "^2.27.5",
 		"compression-webpack-plugin": "^8.0.1",
@@ -89,6 +88,7 @@
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2"
+		"@types/webpack-env": "^1.16.2",
+		"babel-plugin-transform-remove-console": "^6.9.4"
 	}
 }
