--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"@types/universal-analytics": "^0.4.5",
 		"@types/webpack-env": "^1.16.2",
 		"@types/ws": "^7.4.7",
+		"babel-loader": "^10.0.0",
 		"babel-plugin-glob-import": "^0.0.9-1",
 		"babel-plugin-transform-imports": "^2.0.0",
 		"babel-plugin-transform-react-remove-prop-types": "^0.4.24",
@@ -88,7 +89,6 @@
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2",
-		"babel-loader": "^10.0.0"
+		"@types/webpack-env": "^1.16.2"
 	}
 }
