--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.4.6-5",
+	"version": "0.5.9",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
 	"bin": {
-		"5htp": "src/index.ts"
+		"5htp": "index.ts"
 	},
 	"engines": {
 		"node": ">=16.1.0",
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@babel/cli": "^7.15.4",
 		"@babel/plugin-proposal-class-properties": "^7.14.5",
+		"@babel/plugin-proposal-decorators": "^7.25.9",
 		"@babel/plugin-proposal-private-methods": "^7.14.5",
 		"@babel/plugin-proposal-private-property-in-object": "^7.15.4",
 		"@babel/plugin-transform-react-constant-elements": "^7.14.5",
@@ -69,6 +70,7 @@
 		"prompts": "^2.4.2",
 		"react-dev-utils": "^11.0.4",
 		"replace-once": "^1.0.0",
+		"serialize-javascript": "^6.0.2",
 		"speed-measure-webpack-plugin": "^1.5.0",
 		"terser-webpack-plugin": "^5.2.4",
 		"ts-alias": "^0.0.7",
