--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.6.0",
+	"version": "0.6.1",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -54,10 +54,7 @@
 		"dayjs": "^1.11.5",
 		"favicons": "^7.2.0",
 		"filesize": "^8.0.3",
-		"image-minimizer-webpack-plugin": "^2.2.0",
-		"imagemin": "^8.0.1",
 		"imagemin-svgo": "^10.0.0",
-		"imagemin-webp": "^6.0.0",
 		"json5": "^2.2.0",
 		"less-loader": "^10.0.1",
 		"less-vars-to-js": "^1.3.0",
@@ -91,6 +88,11 @@
 		"@types/node": "^16.9.1",
 		"@types/nodemailer": "^6.4.4",
 		"@types/prompts": "^2.0.14",
-		"@types/webpack-env": "^1.16.2"
+		"@types/webpack-env": "^1.16.2",
+		"image-minimizer-webpack-plugin": "^4.1.4",
+		"imagemin": "^9.0.1",
+		"imagemin-webp": "^6.0.0",
+		"responsive-loader": "^3.1.2",
+		"sharp": "^0.34.3"
 	}
 }
