--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.6.2-6",
+	"version": "0.6.2-7",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -40,6 +40,7 @@
 		"@types/universal-analytics": "^0.4.5",
 		"@types/webpack-env": "^1.16.2",
 		"@types/ws": "^7.4.7",
+		"autoprefixer": "^10.4.21",
 		"babel-loader": "^10.0.0",
 		"babel-plugin-glob-import": "^0.0.9-1",
 		"babel-plugin-transform-imports": "^2.0.0",
@@ -67,6 +68,7 @@
 		"node-cmd": "^5.0.0",
 		"node-notifier": "^10.0.0",
 		"null-loader": "^4.0.1",
+		"postcss-loader": "^8.2.0",
 		"prompts": "^2.4.2",
 		"react-dev-utils": "^11.0.4",
 		"replace-once": "^1.0.0",
@@ -74,6 +76,7 @@
 		"serialize-javascript": "^6.0.2",
 		"sharp": "^0.34.3",
 		"speed-measure-webpack-plugin": "^1.5.0",
+		"tailwindcss": "^3.4.1",
 		"terser-webpack-plugin": "^5.2.4",
 		"ts-alias": "^0.0.7",
 		"ts-node": "^10.9.1",
