Migrate to tailwind 4

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "5htp",
 	"description": "Convenient TypeScript framework designed for Performance and Productivity.",
-	"version": "0.6.2-95",
+	"version": "0.6.2-96",
 	"author": "Gaetan Le Gac (https://github.com/gaetanlegac)",
 	"repository": "git://github.com/gaetanlegac/5htp.git",
 	"license": "MIT",
@@ -27,6 +27,7 @@
 		"@babel/preset-typescript": "^7.15.0",
 		"@prefresh/webpack": "^3.3.2",
 		"@squoosh/lib": "^0.4.0",
+		"@tailwindcss/postcss": "^4.1.17",
 		"@types/babel__core": "^7.1.16",
 		"@types/cookie": "^0.4.1",
 		"@types/express": "^4.17.13",
@@ -76,7 +77,7 @@
 		"serialize-javascript": "^6.0.2",
 		"sharp": "^0.34.3",
 		"speed-measure-webpack-plugin": "^1.5.0",
-		"tailwindcss": "^3.4.1",
+		"tailwindcss": "^4.1.17",
 		"terser-webpack-plugin": "^5.2.4",
 		"ts-alias": "^0.0.7",
 		"ts-node": "^10.9.1",
